# python-whisper-cpp-client

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: test.py
src/whisper_cpp_client/: WhisperCppClient.py  __init__.py
