[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-cpp-client"
version = "0.1.1"
authors = [
  { name = "Chris Landa", email = "stylesuxx@gmail.com" }
]
description = "A small, lightweight client for the whisper.cpp server."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = { file = "LICENSE"}
dependencies = [
  "requests",
]

[project.urls]
Homepage = "https://github.com/stylesuxx/python-whisper-cpp-client"
Issues = "https://github.com/stylesuxx/python-whisper-cpp-client/issues"